
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fflush (int ) ;
 int printf (char*,...) ;
 int stdout ;

void scprint(char * foo, int len){
int i;

 printf("char shellcode[]=\"");
 for(i = 0; i < len; i++){
  printf("\\x%02x",(char)foo[i]&0xff);
 }
 printf("\";\n");
 fflush(stdout);
}
